# digital-asset-validator-plugin

./: Cargo.toml  README.md  Solana.Dockerfile
.github/workflows/: release.yml  test.yml
ci/: env-rc.sh  env.sh  rust-version.sh
plerkle/: Cargo.toml
plerkle/src/: geyser_plugin_nft.rs
plerkle_messenger/: Cargo.toml
plerkle_messenger/src/: plerkle_messenger.rs  redis_messenger.rs
plerkle_serialization/: Cargo.toml
plerkle_serialization/src/: account_info_generated.rs  block_info_generated.rs  common_generated.rs  compiled_instruction_generated.rs  lib.rs  slot_status_info_generated.rs  transaction_info_generated.rs
plerkle_serialization/src/serializer/: serializer_stable.rs
plerkle_snapshot/: Cargo.toml
