[workspace]
members = [
    "plerkle", # 1.6.0+solana.1.16.20
    "plerkle_messenger", # 1.6.8
    "plerkle_serialization", # 1.6.0+solana.1.16.20
]

[profile.release]
debug = true
lto = true
codegen-units = 1

[patch.crates-io]
solana-geyser-plugin-interface = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.20-geyser-block-v3" }
solana-program = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.20-geyser-block-v3" }
solana-sdk = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.20-geyser-block-v3" }
solana-transaction-status = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.20-geyser-block-v3" }
