[package]
name = "plerkle"
description = "Geyser plugin with dynamic config reloading, message bus agnostic abstractions and a whole lot of fun."
version = "1.6.0+solana.1.16.20"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.53"
base64 = "0.21.0"
bs58 = "0.4.0"
bytemuck = "1.11.0"
cadence = "0.29.0"
cadence-macros = "0.29.0"
chrono = "0.4.19"
dashmap = { version = "5.4.0" }
figment = { version = "0.10.6", features = ["env", "test"] }
flatbuffers = "23.1.21"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
plerkle_messenger = { path = "../plerkle_messenger", version = "1.6.0", features = ["redis"] }
plerkle_serialization = { path = "../plerkle_serialization", version = "1.6.0" }
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
solana-geyser-plugin-interface = "=1.16.20"
solana-logger = "=1.16.20"
solana-sdk = "=1.16.20"
solana-transaction-status = "=1.16.20"
thiserror = "1.0.30"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "ansi"] }

[dependencies.num-integer]
version = "0.1.44"
default-features = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
