[package]
name = "plerkle_messenger"
description = "Metaplex Messenger trait for Geyser plugin producer/consumer patterns."
version = "1.6.0+solana.2.0.17"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"
publish = false

[dependencies]
async-mutex = "1.4.0"
async-trait = "0.1.53"
blake3 = "1.3.3"
cadence = "0.29.0"
cadence-macros = "0.29.0"
figment = { version = "0.10.6", features = ["env", "test"] }
futures = "0.3"
log = "0.4.11"
redis = { version = "0.22.3", features = ["aio", "tokio-comp", "streams", "tokio-native-tls-comp", "connection-manager"], optional = true }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
