[package]
name = "plerkle_serialization"
description = "Metaplex Flatbuffers Plerkle Serialization for Geyser plugin producer/consumer patterns."
version = "1.6.0+solana.2.0.17"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"
publish = false

[dependencies]
bs58 = "0.4.0"
chrono = "0.4.22"
flatbuffers = "23.1.21"
serde = "1.0.152"
solana-sdk = "=2.0.17"
solana-transaction-status = "=2.0.17"
thiserror = "1.0.32"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
